; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_rpcb_clnt.c_rpcb_get_local.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_rpcb_clnt.c_rpcb_get_local.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rpcb_clnt_lock = common dso_local global i32 0, align 4
@rpcb_users = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @rpcb_get_local to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rpcb_get_local() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @spin_lock(i32* @rpcb_clnt_lock)
  %3 = load i32, i32* @rpcb_users, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @rpcb_users, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* @rpcb_users, align 4
  br label %8

8:                                                ; preds = %5, %0
  %9 = load i32, i32* @rpcb_users, align 4
  store i32 %9, i32* %1, align 4
  %10 = call i32 @spin_unlock(i32* @rpcb_clnt_lock)
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
